bug fix/ manual RBAC to Spring Security + cors in application properties for deployment